--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,11 @@ jobs:
 
       - name: Generate random number files
         run: |
-          mkdir -p src/test/resources
-          echo "18 94 55 3 8 62 10 45 76 89 27 91 28 39 32 4 20 58 16 67 21 70 96 5 41 7 92 24 61 86 53 38 2 6 73 11 81 23 50 9 1 13 88 22 31 33 64 12 52 26 87 40 66 49 46 65 29 34 77 17 30 44 15 68 85 43 42 14 93 47 69 84 36 72 59 19 63 78 71 75 25 37 60 79 54 48 80 35 56 51 57 82 90 83 95 74 99 100 97 98" > src/test/resources/numbers.txt
-          echo "1 2 3 4 5" > src/test/resources/number.txt
+          echo "18 94 55 3 8 62 10 45 76 89 27 91 28 39 32 4 20 58 16 67 21 70 96 5 41 7 92 24 61 86 53 38 2 6 73 11 81 23 50 9 1 13 88 22 31 33 64 12 52 26 87 40 66 49 46 65 29 34 77 17 30 44 15 68 85 43 42 14 93 47 69 84 36 72 59 19 63 78 71 75 25 37 60 79 54 48 80 35 56 51 57 82 90 83 95 74 99 100 97 98" > numbers.txt
+          echo "1 2 3 4 5" > number.txt
 
       - name: Compile
-        run: javac -cp .:junit-4.13.2.jar:hamcrest-core-1.3.jar -d bin src/main/java/NumberProcessor.java src/test/java/PerformanceTests.java
+        run: javac -cp .:src src/NumberProcessor.java src/PerformanceTests.java
 
       - name: Run tests
-        run: java -cp .:bin:junit-4.13.2.jar:hamcrest-core-1.3.jar org.junit.runner.JUnitCore PerformanceTests
+        run: java -cp .:src org.junit.runner.JUnitCore PerformanceTests
