--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,13 +23,19 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
+      - name: Install dependencies
+        run: |
+          mkdir -p lib
+          curl -L -o lib/junit-4.13.2.jar https://repo1.maven.org/maven2/junit/junit/4.13.2/junit-4.13.2.jar
+          curl -L -o lib/hamcrest-core-1.3.jar https://repo1.maven.org/maven2/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar
+
       - name: Generate random number files
         run: |
           echo "18 94 55 3 8 62 10 45 76 89 27 91 28 39 32 4 20 58 16 67 21 70 96 5 41 7 92 24 61 86 53 38 2 6 73 11 81 23 50 9 1 13 88 22 31 33 64 12 52 26 87 40 66 49 46 65 29 34 77 17 30 44 15 68 85 43 42 14 93 47 69 84 36 72 59 19 63 78 71 75 25 37 60 79 54 48 80 35 56 51 57 82 90 83 95 74 99 100 97 98" > numbers.txt
           echo "1 2 3 4 5" > number.txt
 
       - name: Compile
-        run: javac -cp .:src src/NumberProcessor.java src/PerformanceTests.java
+        run: javac -cp .:lib/junit-4.13.2.jar:lib/hamcrest-core-1.3.jar -d bin src/NumberProcessor.java src/PerformanceTests.java
 
       - name: Run tests
-        run: java -cp .:src org.junit.runner.JUnitCore PerformanceTests
+        run: java -cp .:bin:lib/junit-4.13.2.jar:lib/hamcrest-core-1.3.jar org.junit.runner.JUnitCore PerformanceTests
